# GameSort

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: blacklist.csv
games/: README.txt
lib/: simdjson.cpp
res/images/xcf/: genreButton.xcf  platformButton.xcf  ratingButton.xcf  titleButton.xcf
src/: CMakeLists.txt  Game.cpp  Game.h  Game.hpp  TextureManager.cpp  TextureManager.h  TextureManager.hpp  Title.cpp  Title.h  buttons.cpp  buttons.h  grailsort.h  main.cpp  mergesort.cpp  mergesort.h  mergesort.hpp  timsort.cpp  timsort.h  timsort.hpp
